[tool.poetry]
name = "myholidaybot"
version = "0.1.0"
description = ""
authors = ["PolinaLack <polina.lack@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.9.5"
pydantic = "^2.7.4"
aiogram = "^3.7.0"
pydantic-settings = "^2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
